--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.0.3",
     "chai": "^4.2.0",
+    "chromium": "^3.0.3",
     "eslint": "^7.12.0",
     "eslint-plugin-github": "^4.1.1",
     "karma": "^5.2.3",
