--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "license": "MIT",
   "author": "GitHub Inc.",
   "type": "module",
-  "main": "lib/index.js",
-  "module": "lib/index.js",
+  "main": "src/index.js",
+  "module": "src/index.js",
   "files": [
-    "lib"
+    "src"
   ],
   "scripts": {
-    "build": "tsc --build",
+    "build": "tsc --build ./tsconfig.build.json",
     "clean": "tsc --build --clean",
     "lint": "eslint . --ignore-path .gitignore",
     "pretest": "npm run build",
@@ -28,27 +28,29 @@
   },
   "prettier": "@github/prettier-config",
   "dependencies": {
-    "@github/template-parts": "^0.3.0"
+    "@github/template-parts": "^0.5.0"
   },
   "devDependencies": {
     "@github/prettier-config": "0.0.4",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rollup/plugin-typescript": "^6.0.0",
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.0.3",
-    "chai": "^4.2.0",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.1",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
+    "chai": "^4.3.6",
     "chromium": "^3.0.3",
-    "eslint": "^7.12.0",
-    "eslint-plugin-github": "^4.1.1",
-    "karma": "^5.2.3",
+    "esbuild": "^0.14.27",
+    "eslint": "^8.11.0",
+    "eslint-plugin-github": "^4.3.6",
+    "karma": "^6.3.17",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^3.1.0",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-esbuild": "^2.2.4",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-rollup-preprocessor": "^7.0.5",
+    "karma-rollup-preprocessor": "^7.0.8",
     "karma-safarinative-launcher": "^1.1.0",
-    "mocha": "^8.2.0",
-    "rollup": "^2.32.1",
-    "typescript": "^4.0.3"
+    "mocha": "^9.2.2",
+    "rollup": "^2.70.1",
+    "typescript": "^4.6.2"
   }
 }
